<resources>
    <string name="app_name">LEARnFUN</string>

    <!--menu-->
    <string name="go_to_today">체험학습 바로가기</string>
    <string name="go_to_plantable">학습 일정</string>
    <string name="go_to_studentlist">학생 관리</string>
    <string name="go_to_contents">미션박스</string>
    <string name="go_to_checklist">체크리스트</string>
    <string name="go_to_recommend">주변장소</string>
    <string name="history_List">히스토리</string>
    <string name="survey_List">설문조사</string>
    <string name="notice_list">가정통신문</string>
    <string name="child_history_List">자녀일정보기</string>
    <string name="teacher_login">교사로 로그인</string>
    <string name="parent_login">학부모로 로그인</string>
    <string name="student_login">학생으로 로그인</string>


    <!--title-->
    <string name="title_activity_today">Map</string>
    <string name="title_activity_recommend">Map</string>
    <string name="title_activity_history_detail">Map</string>
    <string name="title_activity_content_map">Map</string>
    <string name="title_activity_content_collection">ContentCollection</string>

    <!--action-->
    <string name="close">닫기</string>
    <string name="write">글쓰기</string>
    <string name="agree">동의</string>
    <string name="disagree">비동의</string>
    <string name="back">뒤로가기</string>
    <string name="save">저장</string>
    <string name="history">history</string>
    <string name="student_location">학생위치</string>
    <string name="log">로그</string>
    <string name="notice">공지</string>
    <string name="action_settings">Settings</string>

    <!--table head-->
    <string name="title">제목</string>
    <string name="writer">작성자</string>
    <string name="date">일시</string>
    <string name="limitdate">종료일</string>
    <string name="notice_respond">응답결과</string>
    <string name="no"></string>
    <string name="place">장소</string>
    <string name="time">시간</string>

    <!--msg-->
    <string name="write_Content">내용을 입력해주세요</string>
    <string name="none_content">내용이 없습니다.</string>
    <string name="not_ready">준비중입니다...</string>
    <string name="saved">저장되었습니다.</string>
    <string name="prompt">반을 선택하세요</string>
    <string name="id_hint">아이디를 입력하세요</string>
    <string name="pw_hint">패스워드를 입력하세요</string>
    <string name="hello_teacher">선생님 반갑습니다.</string>
    <string name="hello_parent">학부모님 반갑습니다.</string>
    <string name="hello_student">학생 반갑습니다.</string>
    <string name="location_setting">위치 서비스 설정</string>
    <string name="location_setting_message">무선 네트워크 사용, GPS 위성 사용을 모두 체크하셔야 정확한 위치 서비스가 가능합니다.\n위치 서비스 기능을 설정하시겠습니까?</string>
    <string name="login_fail">Login fail, check the ID and Password</string>
    <string name="need_pic">사진은 필수입니다.</string>
    <string name="servey_mission">미션을 평가해주세요.</string>

    <!--temp-->
    <string name="bongchun">소연</string>
    <string name="send_notice">내일 출발 시간 오전 6시로 변경</string>
    <string name="temp_message">아이들이 열심히 놀고 있네요.</string>

    <!--contents-->
    <string-array name="class_Name">
        <item>1반</item>
        <item>2반</item>
        <item>3반</item>
    </string-array>
    <string-array name="color_array">
        <item>RED</item>
        <item>BLUE</item>
        <item>YELLOW</item>
    </string-array>
    <string name="now">현재위치</string>
    <string name="teacher">선생님</string>
    <string name="class1">1반</string>
    <string name="class2">2반</string>
    <string name="class3">3반</string>
    <string name="send">전송</string>
    <string name="foot_print">발자취</string>
    <string name="className">반</string>
    <string name="point"> 점</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
