<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learnfun.super8team.learnfun.Activity.StudentMainActivity">

    <LinearLayout style="@style/initWidthNHeight"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout style="@style/initWidthNHeight"
            android:orientation="horizontal">

            <Button style="@style/btnMainMenus"
                android:id="@+id/goToHistoryDetail"
                android:background="@color/colorPrimary"
                android:text="@string/go_to_today"
                android:textColor="@color/colorWrite"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout style="@style/menuHalf"
            android:orientation="horizontal">

            <Button style="@style/btnMainMenusHalf"
                android:id="@+id/goToHistory"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWrite"
                android:textSize="20dp"
                android:text="@string/history_List" />

            <Button style="@style/btnMainMenusHalf"
                android:id="@+id/goToSurvey"
                android:background="@color/colorPurple"
                android:text="@string/survey_List"
                android:textColor="@color/colorWrite"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout style="@style/initWidthNHeight"
            android:orientation="horizontal">

            <Button style="@style/btnMainMenus"
                android:id="@+id/goToContens"
                android:background="@color/colorSky"
                android:textColor="@color/colorWrite"
                android:textSize="20dp"
                android:text="@string/go_to_contents" />
        </LinearLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>
