<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment

        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:duration="500"
        tools:context="com.learnfun.super8team.learnfun.HistoryDetailActivity"
        >



    </fragment>
    <ScrollView
        android:id="@+id/scrollPage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"
        >

        <LinearLayout
            android:id="@+id/slidingPage01"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:background="#B3f9f7f7"
            android:visibility="gone"

            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/contentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/writeHistory"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/write"
                    android:layout_weight="0.97" />

                <Button
                    android:id="@+id/slidingPageClose"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/close" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>